# serial2net

./: README.md  pyproject.toml
serialnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
serialnet/client/: cli.py  serial_client.py
serialnet/server/: cli.py  serial_server.py
